<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_extra_large"
        android:layout_marginLeft="@dimen/margin_extra_large"
        android:layout_marginTop="@dimen/margin_medium"
        android:orientation="vertical">

        <TextView
            android:id="@+id/step_short_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_extra_small"
            android:background="#000"/>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>